--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -11,20 +11,24 @@
     <meta name="viewport" content="width=device‐width, initial‐scale=1.0" />
     <link rel="stylesheet" href="~/EyeHistoria.styles.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/Index.css">
+    <link rel="stylesheet" type="text/css" href="~/css/Index1.css">
+
 
           
 
 </head>
 <body>
     <div class="container">
+        <h4>Select Patient's Symptoms</h4>
+
         <div class=row>
             <div class="col-sm-6">
                 <form method="post" action="~/Home/SubmitDiagnosis">
                     @foreach (var symptom_item in Model.List_of_symptoms)
                     {
                         <div class="symptom">
-                            <label for="@symptom_item.SymptomName">@symptom_item.SymptomName</label>
-                            <input type="checkbox" id="@symptom_item.SymptomName" name="@symptom_item.SymptomName" value="@symptom_item.SymptomName" 
+                            <label for="@symptom_item.SymptomName">
+                            <input type="checkbox" style="display:none" id="@symptom_item.SymptomName" name="@symptom_item.SymptomName" value="@symptom_item.SymptomName" 
                                         data-onset="@symptom_item.SymptomName@Html.Raw("_Onset")" 
                                         data-location="@symptom_item.SymptomName@Html.Raw("_Location")"
                                         data-duration="@symptom_item.SymptomName@Html.Raw("_Duration")"
@@ -32,8 +36,11 @@
                                         data-aggravation="@symptom_item.SymptomName@Html.Raw("_Aggravation")"
                                         data-relief="@symptom_item.SymptomName@Html.Raw("_Relief")"
                                         data-timing="@symptom_item.SymptomName@Html.Raw("_Timing")"
-                                        data-severity="@symptom_item.SymptomName@Html.Raw("_Severity")">
+                                   data-severity="@symptom_item.SymptomName@Html.Raw("_Severity")">
+                                   <span class="symptom_names">@symptom_item.SymptomName</span>
+                            </label>
                         </div>
+
                     }
     
                     <input type="submit" value="Submit Result" />
