--- a/EyeHistoria/Views/Admin/Index.cshtml
+++ b/EyeHistoria/Views/Admin/Index.cshtml
@@ -43,9 +43,8 @@
                  @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    <a asp-action="DeleteSymptoms" asp-controller="Admin"
+                       asp-route-id="@item.SymptomID">Delete</a>
             </td>
         </tr>
 }
