--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         
         <nav>
             <div class="picture">
-                <img src="~/lib/images/logo .png" />
+                <img class="logo-pic" src="~/lib/images/logo .png" />
             </div>
             
            
@@ -38,7 +38,7 @@
             </ul>
         </nav>
 
-        <li style="float:right">
+        <!---<li style="float:right">
                             <a class="nav-link dropdown-toggle" href="#" id="deliveryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Questions
                             </a>
@@ -47,7 +47,7 @@
                                 <li><a class="dropdown-item" href="~/Admin/AddQuestions">Add Questions</a></li>
                             </ul>
                         </li>
-                   
+                   -->
             
         
     </header>
