I ADDED A TRASH CAN XD

--- a/EyeHistoria/Views/Admin/AddQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/AddQuestions.cshtml
@@ -52,11 +52,11 @@
                 <input asp-for="FollowUpID" class="form-control" />
                 <span asp-validation-for="FollowUpID" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Data_questionID" class="control-label"></label>
-                @Html.DropDownListFor(model => model.Data_questionID, ViewData["QuestionList"] as SelectList, "Select a Symptom", new { @class = "form-control" })
-                <span asp-validation-for="Data_questionID" class="text-danger"></span>
-            </div>
+            <select asp-for="Data_questionID"
+                    asp-items="@(new SelectList(
+                     @ViewData["dataquestionlist"] as List <Data_question>,
+                     "Data_questionID", "CombinedDisplay"))"
+                    class="form-select"></select>
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
