--- a/EyeHistoria/Views/Admin/Index.cshtml
+++ b/EyeHistoria/Views/Admin/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@model IEnumerable<EyeHistoria.Models.Symptoms>
-<link rel="stylesheet" type="text/css" href="~/css/Index.css">
 
+@{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+}
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>
@@ -23,47 +25,35 @@
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SymptomID)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SymptomName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdminID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastModifiedBy)
-            </td>
-            <td>
-                 @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                    <a asp-action="DeleteSymptoms" asp-controller="Admin"
-                       asp-route-id="@item.SymptomID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SymptomID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SymptomName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdminID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastModifiedBy)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    <a asp-action="DeleteSymptoms" asp-controller="Admin" asp-route-id="@item.SymptomID">
+                        <i class="fas fa-trash"></i>
+                    </a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
