--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -9,7 +9,7 @@
 <h1>ViewQuestions</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddQuestions">Create New</a>
 </p>
 <table class="table">
     <thead>
