--- a/EyeHistoria/Views/Shared/_AdminLayout.cshtml
+++ b/EyeHistoria/Views/Shared/_AdminLayout.cshtml
@@ -21,7 +21,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewQuestions">View Questions</a>
                         </li>
                     </ul>
                 </div>
