--- a/EyeHistoria/Views/Admin/Index.cshtml
+++ b/EyeHistoria/Views/Admin/Index.cshtml
@@ -3,7 +3,12 @@
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link rel="stylesheet" type="text/css" href="~/css/Admin.css">
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
 
+<h1>Patient Records</h1>
+
+<hr />
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
