--- a/EyeHistoria/Views/Admin/Create.cshtml
+++ b/EyeHistoria/Views/Admin/Create.cshtml
@@ -2,9 +2,16 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
+<link rel="stylesheet" type="text/css" href="~/css/Create.css">
 
-<h4>Symptoms</h4>
+
+<div>
+    <a asp-action="Index"><i class="arrow">🡸</i> Back to List</a>
+</div>
+<h1>Add Symptoms</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,9 +39,7 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 
 
