--- a/EyeHistoria/Views/Shared/_AdminLayout.cshtml
+++ b/EyeHistoria/Views/Shared/_AdminLayout.cshtml
@@ -4,29 +4,39 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Your Application Name</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/css/Admin.css">
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Your Application Name</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewQuestions">View Questions</a>
-                        </li>
-                    </ul>
-                </div>
+        <div class="picture">
+                <img class="logo-pic" src="~/lib/images/logo .png" />
             </div>
+        <nav>
+            
+
+
+
+            <a style="float:left" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Application Name</a>
+            <ul class="navbar-nav flex-grow-1">
+
+                <li>
+                    <a class="nav-link" asp-controller="" asp-controller="Admin" asp-action="Index">Home</a>
+                </li>
+                <li>
+                    <a class="active" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewDiagnosis">View Diagnosis</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewQuestions">FAQs</a>
+                </li>
+
+            </ul>
         </nav>
+        
     </header>
 
     <div class="container">
