--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewDiagnosis">View Diagnosis</a>
                         </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewQuestions">FAQs</a>
+                </li>
                         
             </ul>
         </nav>
