search bar for ViewDiagnosis search by name

--- a/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
+++ b/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
@@ -5,6 +5,25 @@
 <p>
     <a asp-action="AddDiagnosis">Create New</a>
 </p>
+<div>
+    <form asp-action="ViewDiagnosis" method="get">
+        <p>
+            Search Diagnosis : <input type="text" name="SearchString" />
+            <input type="submit" value="Search">
+        </p>
+        <div class="input-group mb-3">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+            <input type="text" class="form-control" aria-label="Text input with dropdown button">
+        </div>
+    </form>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -71,3 +90,6 @@
 }
     </tbody>
 </table>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
