--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -6,10 +6,10 @@
     ViewData["Title"] = "ViewQuestions";
 }
 
-<h1>ViewQuestions</h1>
+<h1>Questions</h1>
 
 <p>
-    <a asp-action="AddQuestions">Create New</a>
+    <a asp-action="AddQuestions">Add Question</a>
 </p>
 <table class="table">
     <thead>
