changed location of image file

--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
             <nav>
                 <div class="picture">
-                    <img class="logo-pic" src="~/lib/images/logo .png" />
+                    <img class="logo-pic" src="~/image/logo .png" />
                 </div>
 
 
