--- a/EyeHistoria/Views/Admin/Index.cshtml
+++ b/EyeHistoria/Views/Admin/Index.cshtml
@@ -1,11 +1,16 @@
 ﻿@model IEnumerable<EyeHistoria.Models.Symptoms>
 
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
+<link rel="stylesheet" type="text/css" href="~/css/Admin.css">
+
+
 
 <h1>Patient Records</h1>
 
 <hr />
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-area="" asp-controller="Admin" asp-action="Create">+ Create New</a>
+
 </p>
 <table class="table table-bordered">
     <thead>
