--- a/EyeHistoria/wwwroot/css/Create.css
+++ b/EyeHistoria/wwwroot/css/Create.css
@@ -11,6 +11,10 @@
 .col-md-4{
     margin-left: 100px;
 }
+h1{
+    display: flex;
+    align-items: center;
+}
 div a {
     display: inline-block;
     padding-left: 20px; /* Adjust the padding as needed */
