search bar for Admin Index

--- a/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
+++ b/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<EyeHistoria.Models.Diagnosis>
 <link rel="stylesheet" type="text/css" href="~/css/Index.css">
 
+<h1>Diagnosis</h1>
 
 <p>
     <a asp-action="AddDiagnosis">Create New</a>
