fixed image src

--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <section class="hero-section">
-        <img src="~/lib/images/poto.jpg" alt="Wide Image">
+        <img src="~/image/poto.jpg" alt="Wide Image">
         <div class="hero-content">
             <h1>Welcome to EyeHistoria</h1>
             <p>Explore the symptoms and submit diagnosis.</p>
